[tool.poetry]
name = "instadump"
version = "0.1.0"
description = ""
authors = ["Andriy Orehov <andriyorehov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-cors = "^3.0"
sqlalchemy = "^1.3"
Flask-SQLAlchemy = "^2.4"
psycopg2 = "^2.8"
InstagramApi = "^1.0"
marshmallow-sqlalchemy = "^0.19.0"
instagram-private-api = {git = "https://git@github.com/ping/instagram_private_api.git"}
cachier = "^1.2"
python-dotenv = "^0.10.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
